<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">波聊</string>
    <string name="user_name_error">请输入正确的用户名</string>
    <string name="password_error">请输入正确的密码</string>
    <string name="logging">登录中...</string>
    <string name="login_failed">登录失败</string>
    <string name="user_name">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_allow_permission">请允许权限</string>
    <string name="login">登录</string>
    <string name="new_user">新用户</string>
    <string name="password_again">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="registering">正在注册</string>
    <string name="cofirm_password_error">两次输入的密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="user_already_exist">用户已经存在</string>

    <string name="message">消息</string>
    <string name="contact">联系人</string>
    <string name="dynamic">设置</string>
    <string name="my_logout">退出:%s</string>
    <string name="logout_failed">退出失败</string>
    <string name="logout_success">退出成功</string>
    <string name="load_contacts_failed">加载联系人失败</string>
    <string name="delete_frend_title">删除好友</string>
    <string name="delete_frend_menssage">是否要删除%s</string>
    <string name="cancle">取消</string>
    <string name="confirm">确认</string>
    <string name="delete_friend_successs">删除好友成功</string>
    <string name="delete_friend_failed">删除好友失败</string>
    <string name="add">添加</string>
    <string name="added">已添加</string>
    <string name="search_failed">请输入正确的用户名</string>
    <string name="search_success">搜索成功</string>

    <string name="send_add_friend_success">发送好友请求成功</string>
    <string name="send_add_friend_failed">发送好友请求失败</string>
    <string name="send">发送</string>
    <string name="chat_title">与%s聊天中</string>
    <string name="send_message_failed">发送消息失败</string>
    <string name="no_text_message">非文本消息</string>
    <string name="receive_new_message">收到一条新消息</string>

    <string name="no_more_historical_news">"没有更多历史消息"</string>
</resources>